spacing fixes

--- a/stylesrc/about.styl
+++ b/stylesrc/about.styl
@@ -75,14 +75,12 @@ article
 
   ul
     display: flex
-    padding: 0
+    padding: 0px 8vw
     margin: 0
     flex-wrap: nowrap
     overflow-x: auto
-    justify-content: space-around
+    justify-content: space-between
     background-color: white-color
-    margin-bottom: 0
-    padding-bottom: 0
 
     li
       flex: 0 0 auto
