--- a/stylesrc/gen.styl
+++ b/stylesrc/gen.styl
@@ -12,6 +12,9 @@ body
 .maincontainer
   width: 100%
 
+.wrap
+  flex-wrap: wrap
+
 a
   text-decoration: none
   color: theme-color
