--- a/stylesrc/people.styl
+++ b/stylesrc/people.styl
@@ -12,6 +12,7 @@ h1.title
   text-align: center
   padding: 16px
   max-width: 360px
+  min-width: 180px
 
 .tilecontainer
   display: flex
